--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Idle Hands</string>
+
+    <string name="desc_firebase_lockup">Firebase logo and name</string>
+    <string name="twitter_title_text">Twitter Login</string>
+    <string name="signed_out">Signed Out</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="twitter_status_fmt">Twitter User: %s</string>
+    <string name="firebase_status_fmt">Firebase User: %s</string>
 </resources>
